--- a/public/app/components/articolo/articoloView.html
+++ b/public/app/components/articolo/articoloView.html
@@ -18,9 +18,6 @@
 		    border:1px solid #f00;
 		}
 
-		.product-social-links {
-		    line-height: 10px;
-		}
 
 	</style>
   
@@ -29,29 +26,19 @@
 <body  data-spy="scroll" data-target=".navbar" data-offset="50" >
 
 
-	<!-- Load Facebook SDK for JavaScript -->
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
-
 
 	<div id="coloresfondo">
 			<menu-mio></menu-mio>
 
 		<div  ng-switch on="categoria">
 			<div class="animate-switch" ng-switch-when="Intervista">
-				<img id="fotointerviste" src="img/interviste.jpg">
+				<img class="fotocategoria" src="img/interviste.jpg">
 			</div>
 			<div class="animate-switch" ng-switch-when="Libro">
-				<img id="fotointerviste" src="img/libri.jpg">
+				<img class="fotocategoria" src="img/libri.jpg">
 			</div>
 			<div class="animate-switch" ng-switch-default>
-				<img id="fotointerviste" src="img/cultura.jpg">
+				<img class="fotocategoria" src="img/cultura.jpg">
 			</div>
 		</div>
 
@@ -60,11 +47,13 @@
 		 <div class="text-center">
 			<h1 id="titolo">{{articolo.title}} </h1>
 			<small class="text-muted"> {{articolo.datetime  | date:'dd MMM yyyy HH:mm'}}	</small>
-		 </div><br><br>
+		 </div>
 		
 		 <!--immagine singola articolo-->
 		<div class="text-center"> 
-			<img class="immaginearticolo" ng-src="{{articolo.pathImmagine}}" alt="" class="img-responsive text-center" >		
+			<div class="row">
+				<img class="immaginearticolo" ng-src="{{articolo.pathImmagine}}" alt="" class="img-responsive text-center" >			
+			</div>			
 		</div> 
 
 
@@ -249,20 +238,7 @@
 					<a ng-click="vuolePartecipare()" href="" class="pull-right">
 						<span>{{articolo.cuori.length}}  <span class="glyphicon glyphicon-heart"></span></span>
 					</a>						
-				</div> <br><br><br>
-				<div class="product-social-links">
-					<!-- Facebook -->
-					<span fb-like="social.Url"></span>
-					<!-- Twitter -->
-					<span tweet="social.Name" tweet-url="myModel.Url"></span>
-					<!-- Google + -->
-					<span google-plus="social.Url"></span>
-					<!-- Pinterest -->
-					<!-- <span pin-it="social.Name" pin-it-image="social.ImageUrl" pin-it-url="social.Url"></span>						 -->
-
-					
-				</div>				
-				<br><br>	
+				</div> <br><br><br>	
 				<hr>
 				<br><br>
 				<form name="commentaForm" novalidate ng-class="{submitted:commentaForm.submitted}" class="text-center">
