--- a/public/asset/css/general.css
+++ b/public/asset/css/general.css
@@ -1,4 +1,8 @@
-  
+  body { 
+    padding-top: 100px;
+  }
+
+
   /* ------------------------ STILE DEI TITOLI */
   h3, h4 {
       letter-spacing: 10px;      
@@ -7,8 +11,8 @@
   }
   
   /* ------------------------ STILE DEI CONTAINER */
-  .container {
-      padding: 80px 120px;
+  .row {
+      margin: 5% 0 5% 0;
   }    
    
   /* ------------------------ NAVBAR */
