--- a/public/app/components/categoria/intervisteView.html
+++ b/public/app/components/categoria/intervisteView.html
@@ -29,7 +29,7 @@
 			<div class="text-center"> 
 				<img class="immaginefondo" src="img/fotointervistafondo.jpg" alt="" class="img-responsive text-center">
 			</div> <br>
-			<h1 id="citazione">"Le idee si assomigliano in modo incredibile, quando si conoscono"
+			<h1 class="citazione">"Le idee si assomigliano in modo incredibile, quando si conoscono"
 			<small id="piccolo"> Samuel Beckett</small></h1>
 		</div>
 	</div>
