--- a/public/app/components/categoria/libriView.html
+++ b/public/app/components/categoria/libriView.html
@@ -25,7 +25,7 @@
 			<div class="text-center"> 
 					<img class="immaginefondo" src="img/fotolibrifondo2.jpg" alt="" class="img-responsive text-center">
 			</div> <br>
-			<h1 id="citazione">"Questo lungo viaggio immobile che chiamiamo leggere"
+			<h1 class="citazione">"Questo lungo viaggio immobile che chiamiamo leggere"
 			<small id="piccolo">Guy Goffette</small></h1>
 		</div>
 	</div>
